fix: white space fix

--- a/cookie/src/App.css
+++ b/cookie/src/App.css
@@ -1,9 +1,8 @@
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
   box-sizing: border-box;
-  white-space: pre-wrap;
 }
 
 .hoverable {
